<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:id="@+id/sign_up_firstname"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LightEditText"
        android:maxLines="1"/>

    <EditText
        style="@style/LightEditText"
        android:id="@+id/sign_up_lastname"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/sign_up_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LightEditText"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/sign_up_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LightEditText"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/sign_up_password_confirm"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LightEditText"
        android:maxLines="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:text="@string/sign_up"
        android:onClick="onClick_Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/already_registered"
            android:textColor="@android:color/white"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_with_period"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="onClick_Login" />
    </LinearLayout>

</LinearLayout>
