<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="hasebou.prototyping.miniattend.CreateClassActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.FloatingActionButton
        android:src="@mipmap/save_ic"
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        app:fabSize="normal"
        android:onClick="onClickCreateClass"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:text="@string/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/class_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="64"
            android:inputType="text"
            android:maxLines="1"/>

        <TextView
            android:text="@string/course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/class_create_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="8"/>

        <TextView
            android:text="@string/course_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/class_create_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"/>

        <TextView
            android:text="@string/course_allowed_absences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/class_create_allowed_absences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>


    </LinearLayout>


</FrameLayout>
