<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event_instance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hasebou.prototyping.miniattend.CreateEventInstance"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectTime">


        <Button
            android:text="@string/time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"/>


        <TextView
            android:id="@+id/event_instance_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"/>


    </LinearLayout>

    <LinearLayout
        android:onClick="selectDate"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:text="@string/date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"/>

        <TextView
            android:id="@+id/event_instance_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            />

    </LinearLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/code_active"
        android:text="@string/qr_code_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.design.widget.FloatingActionButton
        android:src="@mipmap/save_ic"
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        app:fabSize="normal"
        android:onClick="createInstance"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>


</LinearLayout>
